--- a/contact.Rmd
+++ b/contact.Rmd
@@ -1,7 +1,4 @@
 ---
-title: ""
+title: "Contact"
 ---
 
-Vous pouvez nous joindre par mail à l'adresse suivante: [evaluation.modelisations.covid\@gmail.com](mailto:%20evaluation.modelisations.covid@gmail.com).
-
-Vous pouvez également nous contacter via twitter: <https://twitter.com/Covid_Scenarios>.
